--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-  <title>Καθαρισμός Οικοπέδου και κήπου Βουλιαγμένη| Τάσος 6977061929</title>
+  <title>Καθαρισμός Οικοπέδου και κήπου Γλυφάδα| Τάσος 6977061929</title>
 
 
-<meta name="description" content="Καθαρισμός οικοπέδων και κήπων στην Βουλιαγμένη με χαμηλές τιμές. Αποψίλωση, απομάκρυνση μπάζων, κοπή χόρτων. Καλέστε Τάσος: 6977061929.">
+<meta name="description" content="Καθαρισμός οικοπέδου και κήπου στην Γλυφάδα με χαμηλές τιμές. Αποψίλωση, απομάκρυνση μπάζων, κοπή χόρτων. Καλέστε Τάσος: 6977061929.">
 
-<meta name="keywords" content="Καθαρισμός οικοπέδων & κήπων Βουλιαγμένη και σε όλη την Αθήνα, αποψίλωση, απομάκρυνση μπάζων, καθαρισμός κήπου, κοπή χόρτων, Τάσος, οικονομικές τιμές, πρόληψη πυρκαγιάς">
+<meta name="keywords" content="Καθαρισμός οικοπέδων & κήπων Γλυφάδα και σε όλη την Αθήνα, αποψίλωση, απομάκρυνση μπάζων, καθαρισμός κήπου, κοπή χόρτων, Τάσος, οικονομικές τιμές, πρόληψη πυρκαγιάς">
 
 <meta name="author" content="Τάσος">
 
@@ -232,7 +232,7 @@ header button:hover {
   </div>
 
   <header>
-    <h1>Καθαρισμός Οικοπέδων & Κήπων στhν Βουλιαγμένη</h1>
+    <h1>Καθαρισμός Οικοπέδου & Κήπου στην Γλυφάδα</h1>
     <p>Η ασφάλεια και η καθαριότητα του χώρου σας, στα χέρια του Τάσου!</p>
 <button onclick="showOffer()">Προσφορά</button>
 
@@ -250,7 +250,7 @@ header button:hover {
       </details>
        <details class="dropdown">
         <summary>Απομάκρυνση μπάζων και απορριμμάτων</summary>
-        <p>Εξειδικευμένη απομάκρυνση μπάζων και απορριμμάτων. Αναλαμβάνουμε τη συλλογή και μεταφορά μπάζων και απορριμμάτων από οικόπεδα και κήπους. 
+        <p>Εξειδικευμένη απομάκρυνση απορριμμάτων. Αναλαμβάνουμε τη συλλογή και μεταφορά απορριμμάτων από οικόπεδα και κήπους. 
     Διαθέτουμε ειδικά οχήματα και εργαλεία ώστε η απομάκρυνση να γίνεται γρήγορα, αποτελεσματικά και με σεβασμό στο περιβάλλον.</p>
       </details>
       <details class="dropdown">
@@ -265,7 +265,7 @@ header button:hover {
       <h2>Γιατί να μας επιλέξετε;</h2>
       <details class="dropdown">
         <summary>Άμεση εξυπηρέτηση</summary>
-        <p>Κατανοούμε τη σημασία του χρόνου σας και προσφέρουμε άμεση εξυπηρέτηση σε Βουλιαγμένη,Γλυφάδα, Βούλα, Βάρκιζα, Κορωπί και όλη την Αττική. 
+        <p>Κατανοούμε τη σημασία του χρόνου σας και προσφέρουμε άμεση εξυπηρέτηση σε Βουλιαγμένη, Γλυφάδα, Βούλα, Βάρκιζα, Κορωπί και όλη την Αττική. 
     Επιδιώκουμε πάντα να προγραμματίζουμε τις εργασίες μέσα σε λίγες ημέρες από την πρώτη επικοινωνία, για να έχετε το αποτέλεσμα που θέλετε χωρίς καθυστερήσεις.</p>
       </details>
       <details class="dropdown">
