--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta name="description" content="Καθαρισμός οικοπέδου και κήπου στην Γλυφάδα με χαμηλές τιμές. Αποψίλωση, απομάκρυνση μπάζων, κοπή χόρτων. Καλέστε Τάσος: 6977061929.">
 
-<meta name="keywords" content="Καθαρισμός οικοπέδων & κήπων Γλυφάδα και σε όλη την Αθήνα, αποψίλωση, απομάκρυνση μπάζων, καθαρισμός κήπου, κοπή χόρτων, Τάσος, οικονομικές τιμές, πρόληψη πυρκαγιάς">
+<meta name="keywords" content="Καθαρισμός οικοπέδων & κήπων Γλυφάδα, Άλιμος, Πικέρμι, Ανάβυσσος και σε όλη την Αθήνα, αποψίλωση, απομάκρυνση μπάζων, καθαρισμός κήπου, κοπή χόρτων, Τάσος, οικονομικές τιμές, πρόληψη πυρκαγιάς">
 
 <meta name="author" content="Τάσος">
 
@@ -244,7 +244,7 @@ header button:hover {
       <h2>Οι Υπηρεσίες μας</h2>
       <details class="dropdown">
         <summary>Καθαρισμός οικοπέδων</summary>
-        <p>Αναλαμβάνουμε πλήρη καθαρισμό οικοπέδων στην Βουλιαγμένη σε όλη την Αθήνα από κάθε είδους βλάστηση, σκουπίδια, μπάζα και άλλα απορρίμματα. 
+        <p>Αναλαμβάνουμε πλήρη καθαρισμό οικοπέδων στην Γλυφάδα, Βουλιαγμένη και σε όλη την Αθήνα από κάθε είδους βλάστηση, σκουπίδια και άλλα απορρίμματα. 
     Με ειδικό εξοπλισμό και έμπειρο προσωπικό, φροντίζουμε το οικόπεδό σας να είναι απόλυτα καθαρό, ασφαλές και έτοιμο για οποιαδήποτε χρήση. 
     Ιδανικό για συμμόρφωση με κανονισμούς πυροπροστασίας αλλά και για την αισθητική αναβάθμιση του χώρου.</p>
       </details>
@@ -297,7 +297,7 @@ header button:hover {
 <footer>
  
  <p>
-    Εξυπηρετούμε: Άλιμος, Γλυφάδα, Βούλα, Βάρκιζα, Βουλιαγμένη, Ελληνικό, Αργυρούπολη, Καλλιθέα, Νέα Σμύρνη, Παλαιό Φάληρο, Άγιος Δημήτριος και όλη την Αθήνα.
+    Εξυπηρετούμε: Άλιμος, Γλυφάδα, Πικέρμι, Βούλα, Βάρκιζα, Βουλιαγμένη, Ελληνικό, Αργυρούπολη, Καλλιθέα, Νέα Σμύρνη, Παλαιό Φάληρο, Άγιος Δημήτριος και όλη την Αθήνα.
   </p>
   <p>© 2025 Καθαρισμοί Οικοπέδων & Κήπων- Τάσος</p>
 	 <!-- hitwebcounter Code START -->
