--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta name="description" content="Καθαρισμός οικοπέδου και κήπου στην Γλυφάδα με χαμηλές τιμές. Αποψίλωση, απομάκρυνση μπάζων, κοπή χόρτων. Καλέστε Τάσος: 6977061929.">
 
-<meta name="keywords" content="Καθαρισμός οικοπέδων & κήπων Γλυφάδα, Άλιμος, Πικέρμι, Ανάβυσσος και σε όλη την Αθήνα, αποψίλωση, απομάκρυνση μπάζων, καθαρισμός κήπου, κοπή χόρτων, Τάσος, οικονομικές τιμές, πρόληψη πυρκαγιάς">
+<meta name="keywords" content="Καθαρισμός οικοπέδων & κήπων Γλυφάδα, Άλιμος, Πικέρμι, Ανάβυσσος, Βούλα, Βάρη, βάρκιζα και σε όλη την Αθήνα, αποψίλωση, απομάκρυνση μπάζων, καθαρισμός κήπου, κοπή χόρτων, Τάσος, οικονομικές τιμές, πρόληψη πυρκαγιάς">
 
 <meta name="author" content="Τάσος">
 
@@ -299,7 +299,7 @@ header button:hover {
 <footer>
  
  <p>
-    Εξυπηρετούμε: Άλιμος, Γλυφάδα, Πικέρμι, Βούλα, Βάρκιζα, Βουλιαγμένη, Ελληνικό, Αργυρούπολη, Καλλιθέα, Νέα Σμύρνη, Παλαιό Φάληρο, Άγιος Δημήτριος και όλη την Αθήνα.
+    Εξυπηρετούμε: Άλιμος, Γλυφάδα, Πικέρμι, Ζωγράφου, Κορωπί, Βούλα, Βάρη, Βάρκιζα, Βουλιαγμένη, Ελληνικό, Αργυρούπολη, Ηλιούπολη, Καρέας, Ανάβυσσος, Καλλιθέα, Νέα Σμύρνη, Παλαιό Φάληρο, Άγιος Δημήτριος και όλη την Αθήνα.
   </p>
   <p>© 2025 Καθαρισμοί Οικοπέδων & Κήπων- Τάσος</p>
 	 <!-- hitwebcounter Code START -->
