--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-  <title>Καθαρισμός Οικοπέδου και κήπου Γλυφάδα| Τάσος 6977061929</title>
+  <title>Καθαρισμός Οικοπέδου και κήπου Αθήνα| Τάσος 6977061929</title>
 
 
 <meta name="description" content="Καθαρισμός οικοπέδου και κήπου στην Γλυφάδα με χαμηλές τιμές. Αποψίλωση, απομάκρυνση μπάζων, κοπή χόρτων. Καλέστε Τάσος: 6977061929.">
@@ -234,7 +234,7 @@ header button:hover {
   </div>
 
   <header>
-    <h1>Καθαρισμός Οικοπέδου & Κήπου στην Γλυφάδα</h1>
+    <h1>Καθαρισμός Οικοπέδου & Κήπου στην Αττική</h1>
     <p>Η ασφάλεια και η καθαριότητα του χώρου σας, στα χέρια του Τάσου!</p>
 <button onclick="showOffer()">Προσφορά</button>
 
