--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-  <title>Καθαρισμός Οικοπέδου και κήπου Αθήνα| Τάσος 6977061929</title>
+  <title>Καθαρισμός Οικοπέδου Αθήνα| Τάσος 6977061929 - 6932204664</title>
 
 
-<meta name="description" content="Καθαρισμός οικοπέδου και κήπου στην Γλυφάδα με χαμηλές τιμές. Αποψίλωση, απομάκρυνση μπάζων, κοπή χόρτων. Καλέστε Τάσος: 6977061929.">
+<meta name="description" content="Καθαρισμός οικοπέδου στην Γλυφάδα με χαμηλές τιμές. Αποψίλωση, απομάκρυνση μπάζων, κοπή χόρτων. Καλέστε Τάσος: 6977061929.">
 
-<meta name="keywords" content="Καθαρισμός οικοπέδων & κήπων Γλυφάδα, Άλιμος, Πικέρμι, Ανάβυσσος, Βούλα, Βάρη, βάρκιζα και σε όλη την Αθήνα, αποψίλωση, απομάκρυνση μπάζων, καθαρισμός κήπου, κοπή χόρτων, Τάσος, οικονομικές τιμές, πρόληψη πυρκαγιάς">
+<meta name="keywords" content="Καθαρισμός οικοπέδων Γλυφάδα, Άλιμος, Πικέρμι, Ανάβυσσος, Βούλα, Βάρη, βάρκιζα και σε όλη την Αθήνα, αποψίλωση, απομάκρυνση μπάζων, καθαρισμός κήπου, κοπή χόρτων, Τάσος, οικονομικές τιμές, πρόληψη πυρκαγιάς">
 
 <meta name="author" content="Τάσος">
 
@@ -214,7 +214,7 @@ header button:hover {
   <div style="background:white; padding:30px; border-radius:10px; text-align:center; box-shadow:0 0 10px rgba(0,0,0,0.3); max-width: 400px;">
     <h2 style="color:#d40000; font-size:26px; margin-bottom:20px;">ΠΡΟΣΦΟΡΑ</h2>
 	      <h2 style="color:#d40000; font-size:26px; margin-bottom:20px;">κ. ΤΑΣΟΣ</h2>
-	     <h2 style="color:#d40000; font-size:26px; margin-bottom:20px;">ΤΗΛ: 6977061929</h2>
+	     <h2 style="color:#d40000; font-size:26px; margin-bottom:20px;">ΤΗΛ: 6977061929 - 6932204664</h2>
     <p style="font-size:18px; font-weight:bold; margin-bottom:20px;">
       Μέχρι 31 Μαρτίου 2026:<br>
       Καθαρισμός οικοπέδου 200τμ μόνο 120€<br>
@@ -230,11 +230,11 @@ header button:hover {
 
   <div class="top-bar">
 	  <img src="logo.JPG" alt="Λογότυπο" style="height:80px; vertical-align: middle; margin-right: 10px;">
-   Ονοματεπώνυμο: Τάσος | Τηλέφωνο: <a href="tel:6977061929" style="color:white; text-decoration: underline;">6977061929</a> | Email: <a href="ibalamoutis@yahoo.com" style="color:white; text-decoration: underline;">ibalamoutis@yahoo.com</a>
+   Ονοματεπώνυμο: Τάσος | Τηλέφωνο: <a href="tel:6977061929" style="color:white; text-decoration: underline;">6977061929 - 6932204664</a> | Email: <a href="ibalamoutis@yahoo.com" style="color:white; text-decoration: underline;">ibalamoutis@yahoo.com</a>
   </div>
 
   <header>
-    <h1>Καθαρισμός Οικοπέδου & Κήπου στην Αττική</h1>
+    <h1>Καθαρισμός Οικοπέδου στην Αττική</h1>
     <p>Η ασφάλεια και η καθαριότητα του χώρου σας, στα χέρια του Τάσου!</p>
 <button onclick="showOffer()">Προσφορά</button>
 
@@ -246,13 +246,13 @@ header button:hover {
       <h2>Οι Υπηρεσίες μας</h2>
       <details class="dropdown">
         <summary>Καθαρισμός οικοπέδων</summary>
-        <p>Αναλαμβάνουμε πλήρη καθαρισμό οικοπέδων στην Γλυφάδα, Βουλιαγμένη και σε όλη την Αθήνα από κάθε είδους βλάστηση, σκουπίδια και άλλα απορρίμματα. 
+        <p>Αναλαμβάνουμε πλήρη καθαρισμό οικοπέδων στην Γλυφάδα, Βουλιαγμένη, Κορωπί, Βάρη, Ανάβυσσο, Αρτέμιδα, Κουβαρά και σε όλη την Αθήνα από κάθε είδους βλάστηση, σκουπίδια και άλλα απορρίμματα. 
     Με ειδικό εξοπλισμό και έμπειρο προσωπικό, φροντίζουμε το οικόπεδό σας να είναι απόλυτα καθαρό, ασφαλές και έτοιμο για οποιαδήποτε χρήση. 
     Ιδανικό για συμμόρφωση με κανονισμούς πυροπροστασίας αλλά και για την αισθητική αναβάθμιση του χώρου.</p>
       </details>
        <details class="dropdown">
         <summary>Απομάκρυνση μπάζων και απορριμμάτων</summary>
-        <p>Εξειδικευμένη απομάκρυνση απορριμμάτων. Αναλαμβάνουμε τη συλλογή και μεταφορά απορριμμάτων από οικόπεδα και κήπους. 
+        <p>Εξειδικευμένη απομάκρυνση απορριμμάτων. Αναλαμβάνουμε τη συλλογή και μεταφορά απορριμμάτων από οικόπεδα. 
     Διαθέτουμε ειδικά οχήματα και εργαλεία ώστε η απομάκρυνση να γίνεται γρήγορα, αποτελεσματικά και με σεβασμό στο περιβάλλον.</p>
       </details>
       <details class="dropdown">
@@ -279,7 +279,7 @@ header button:hover {
       <details class="dropdown">
         <summary>Οικονομικές τιμές</summary>
         <p>Παρέχουμε υπηρεσίες υψηλής ποιότητας στις πιο ανταγωνιστικές τιμές της αγοράς. 
-    Χωρίς κρυφές χρεώσεις, με διαφάνεια και ειλικρίνεια, σας προσφέρουμε οικονομικές λύσεις για κάθε ανάγκη. 
+    Ο καθαρισός οικοπέδου χωρίς κρυφές χρεώσεις, με διαφάνεια και ειλικρίνεια, σας προσφέρουμε οικονομικές λύσεις για κάθε ανάγκη. 
     Εκμεταλλευτείτε τις προσφορές μας για ακόμη μεγαλύτερη εξοικονόμηση.</p>
       </details>
     </section>
@@ -318,3 +318,4 @@ header button:hover {
 
 </body>
 </html>
+
