--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ header button:hover {
  <p>
     Εξυπηρετούμε: Άλιμος, Γλυφάδα, Πικέρμι, Ζωγράφου, Κορωπί, Βούλα, Βάρη, Βάρκιζα, Βουλιαγμένη, Ελληνικό, Αργυρούπολη, Ηλιούπολη, Καρέας, Ανάβυσσος, Καλλιθέα, Νέα Σμύρνη, Παλαιό Φάληρο, Άγιος Δημήτριος και όλη την Αθήνα.
   </p>
-  <p>© 2025 Καθαρισμοί Οικοπέδων & Κήπων- Τάσος</p>
+  <p>© 2025 Καθαρισμοί Οικοπέδων - Τάσος</p>
 	 <!-- hitwebcounter Code START -->
 <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=21166276&style=0019&nbdigits=4&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>        
@@ -318,4 +318,5 @@ header button:hover {
 
 </body>
 </html>
+
 
