--- a/index.html
+++ b/index.html
@@ -230,12 +230,12 @@ header button:hover {
 
   <div class="top-bar">
 	  <img src="logo.JPG" alt="Λογότυπο" style="height:80px; vertical-align: middle; margin-right: 10px;">
-   Ονοματεπώνυμο: Τάσος | Τηλέφωνο: <a href="tel:6977061929" style="color:white; text-decoration: underline;">6977061929 - 6932204664</a> | Email: <a href="ibalamoutis@yahoo.com" style="color:white; text-decoration: underline;">ibalamoutis@yahoo.com</a>
+   Ονοματεπώνυμο: Τάσος | Τηλέφωνο: <a href="tel:6977061929" style="color:white; text-decoration: underline;">6977061929 - 6932204664</a> | Email: <a href="katharismosoikopedoutasos@gmail.com" style="color:white; text-decoration: underline;">ibalamoutis@yahoo.com</a>
   </div>
 
   <header>
     <h1>Καθαρισμός Οικοπέδου στην Αττική</h1>
-    <p>Η ασφάλεια και η καθαριότητα του χώρου σας, στα χέρια του Τάσου!</p>
+
 <button onclick="showOffer()">Προσφορά</button>
 
 
@@ -279,8 +279,8 @@ header button:hover {
       <details class="dropdown">
         <summary>Οικονομικές τιμές</summary>
         <p>Παρέχουμε υπηρεσίες υψηλής ποιότητας στις πιο ανταγωνιστικές τιμές της αγοράς. 
-    Ο καθαρισός οικοπέδου χωρίς κρυφές χρεώσεις, με διαφάνεια και ειλικρίνεια, σας προσφέρουμε οικονομικές λύσεις για κάθε ανάγκη. 
-    Εκμεταλλευτείτε τις προσφορές μας για ακόμη μεγαλύτερη εξοικονόμηση.</p>
+    Ο καθαρισμός οικοπέδου χωρίς κρυφές χρεώσεις, με διαφάνεια και ειλικρίνεια. Σας προσφέρουμε οικονομικές λύσεις για κάθε ανάγκη. 
+    Εκμεταλλευτείτε τις προσφορές μας για ακόμη μεγαλύτερη εξοικονόμηση χρημάτων.</p>
       </details>
     </section>
   </div>
@@ -318,5 +318,6 @@ header button:hover {
 
 </body>
 </html>
+
 
 
