--- a/index.html
+++ b/index.html
@@ -272,9 +272,8 @@ header button:hover {
       </details>
       <details class="dropdown">
         <summary>Έμπειρο προσωπικό</summary>
-        <p>Η ομάδα μας διαθέτει πολυετή εμπειρία στον καθαρισμό οικοπέδων και την πρόληψη πυρκαγιών. 
-    Χρησιμοποιούμε σύγχρονα μηχανήματα και τεχνικές, διασφαλίζοντας άριστο αποτέλεσμα με επαγγελματισμό και υπευθυνότητα. 
-    Η ασφάλειά σας είναι για εμάς προτεραιότητα.</p>
+        <p>Η ομάδα μας διαθέτει πολυετή εμπειρία στον καθαρισμό οικοπέδων. 
+    Χρησιμοποιούμε σύγχρονα μηχανήματα και τεχνικές, διασφαλίζοντας άριστο αποτέλεσμα με επαγγελματισμό και υπευθυνότητα. </p>
       </details>
       <details class="dropdown">
         <summary>Οικονομικές τιμές</summary>
@@ -318,6 +317,7 @@ header button:hover {
 
 </body>
 </html>
+
 
 
 
