--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@ header button:hover {
     Εξυπηρετούμε: Άλιμος, Γλυφάδα, Πικέρμι, Ζωγράφου, Κορωπί, Βούλα, Βάρη, Βάρκιζα, Βουλιαγμένη, Ελληνικό, Αργυρούπολη, Ηλιούπολη, Καρέας, Ανάβυσσος, Καλλιθέα, Νέα Σμύρνη, Παλαιό Φάληρο, Άγιος Δημήτριος και όλη την Αθήνα.
   </p>
   <p>© 2025 Καθαρισμοί Οικοπέδων - Τάσος</p>
-	 <!-- hitwebcounter Code START -->
-<a href="https://www.hitwebcounter.com" target="_blank">
-<img src="https://hitwebcounter.com/counter/counter.php?page=21166276&style=0019&nbdigits=4&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>        
+	<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com/" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=21445604&style=0019&nbdigits=4&type=page&initCount=0" title="Counters" Alt="Counters"   border="0" /></a>            
   </footer>
 <script>
   function showOffer() {
@@ -317,6 +317,7 @@ header button:hover {
 
 </body>
 </html>
+
 
 
 
