--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <title>Καθαρισμός Οικοπέδου Αθήνα| Τάσος 6977061929</title>
 
 
-<meta name="description" content="Καθαρισμός οικοπέδου στην Γλυφάδα με χαμηλές τιμές. Αποψίλωση, απομάκρυνση μπάζων, κοπή χόρτων. Καλέστε Τάσος: 6977061929.">
+<meta name="description" content="Καθαρισμός οικοπέδου στην Αθήνα με χαμηλές τιμές. Αποψίλωση, καθαρισμός οικοπέδων, κοπή χόρτων. Καλέστε Τάσος: 6977061929.">
 
-<meta name="keywords" content="Καθαρισμός οικοπέδων Γλυφάδα, Άλιμος, Πικέρμι, Ανάβυσσος, Βούλα, Βάρη, βάρκιζα και σε όλη την Αθήνα, αποψίλωση, απομάκρυνση μπάζων, καθαρισμός κήπου, κοπή χόρτων, Τάσος, οικονομικές τιμές, πρόληψη πυρκαγιάς">
+<meta name="keywords" content="Καθαρισμός οικοπέδων Αθήνα, Άλιμος, Πικέρμι, Ανάβυσσος, Βούλα, Βάρη, βάρκιζα και σε όλη την Αθήνα, αποψίλωση, απομάκρυνση μπάζων, καθαρισμός κήπου, κοπή χόρτων, Τάσος, οικονομικές τιμές, πρόληψη πυρκαγιάς">
 
 <meta name="author" content="Τάσος">
 
@@ -234,7 +234,7 @@ header button:hover {
   </div>
 
   <header>
-    <h1>Καθαρισμός Οικοπέδου στην Αττική</h1>
+    <h1>Καθαρισμός Οικοπέδου στην Αθήνα</h1>
 
 <button onclick="showOffer()">Προσφορά</button>
 
@@ -246,14 +246,14 @@ header button:hover {
       <h2>Οι Υπηρεσίες μας</h2>
       <details class="dropdown">
         <summary>Καθαρισμός οικοπέδων</summary>
-        <p>Αναλαμβάνουμε πλήρη καθαρισμό οικοπέδων στην Γλυφάδα, Βουλιαγμένη, Κορωπί, Βάρη, Ανάβυσσο, Αρτέμιδα, Κουβαρά και σε όλη την Αθήνα από κάθε είδους βλάστηση, σκουπίδια και άλλα απορρίμματα. 
+        <p>Αναλαμβάνουμε πλήρη καθαρισμό οικοπέδου στην Γλυφάδα, Βουλιαγμένη, Κορωπί, Βάρη, Ανάβυσσο, Αρτέμιδα, Κουβαρά και σε όλη την Αθήνα από κάθε είδους βλάστηση, σκουπίδια και άλλα απορρίμματα. 
     Με ειδικό εξοπλισμό και έμπειρο προσωπικό, φροντίζουμε το οικόπεδό σας να είναι απόλυτα καθαρό, ασφαλές και έτοιμο για οποιαδήποτε χρήση. 
     Ιδανικό για συμμόρφωση με κανονισμούς πυροπροστασίας αλλά και για την αισθητική αναβάθμιση του χώρου.</p>
       </details>
        <details class="dropdown">
         <summary>Απομάκρυνση χόρτων και απορριμμάτων</summary>
         <p>Εξειδικευμένη απομάκρυνση απορριμμάτων. Αναλαμβάνουμε τη συλλογή και μεταφορά απορριμμάτων από οικόπεδα. 
-    Διαθέτουμε ειδικά οχήματα και εργαλεία ώστε η απομάκρυνση να γίνεται γρήγορα, αποτελεσματικά και με σεβασμό στο περιβάλλον.</p>
+    Διαθέτουμε ειδικά εργαλεία ώστε η απομάκρυνση να γίνεται γρήγορα, αποτελεσματικά και με σεβασμό στο περιβάλλον.</p>
       </details>
       <details class="dropdown">
         <summary>Κοπή χόρτων & κλαδέματα</summary>
@@ -317,6 +317,7 @@ header button:hover {
 
 </body>
 </html>
+
 
 
 
